Zmiana koloru w branch colors

--- a/evolve/evolve.css
+++ b/evolve/evolve.css
@@ -4470,7 +4470,7 @@ html.gruvboxLight .popper .grad-from-right {
 }
 
 html.gruvboxDark {
-    background-color: #77ff00
+    background-color: #000080
 }
 
 html.gruvboxDark .main>div.popper .has-text-dark,
